@@ -130,6 +130,8 @@ Contents
 			README file that describes the JavaMailServlet
     demo/logging/	source files for demo program showing use of the
 			com.sun.mail.util.logging.MailHandler class
+    demo/outlook/	source files for demo classes showing how to handle
+			old non-MIME messages generated by Outlook
 
 
 Requirements
